--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>sc.fiji</groupId>
+
+  <parent>
+	<groupId>sc.fiji</groupId>
+	<artifactId>pom-trakem2</artifactId>
+	<version>1.0-SNAPSHOT</version>
+  </parent>
+  
+  
   <artifactId>trakem2-tps</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src/main/java/</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	
   <dependencies>
   	<dependency>
   		<groupId>jitk</groupId>
@@ -27,5 +22,25 @@
   		<artifactId>TrakEM2_</artifactId>
   		<version>1.0b-SNAPSHOT</version>
   	</dependency>
+	<dependency>
+		<groupId>sc.fiji</groupId>
+		<artifactId>Simple_Neurite_Tracer</artifactId>
+		<version>2.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>sc.fiji</groupId>
+		<artifactId>level_sets</artifactId>
+		<version>1.0</version>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+	</dependency>
+	<dependency>
+	<groupId>net.sf.opencsv</groupId>
+	<artifactId>opencsv</artifactId>
+	<version>2.0</version>
+</dependency>
   </dependencies>
+
 </project>
