--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   
   
-  <artifactId>trakem2-tps</artifactId>
+  <artifactId>trakem2_tps</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 	
   <dependencies>
@@ -17,21 +17,6 @@
   		<artifactId>jitk-tps</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
-  	<dependency>
-  		<groupId>sc.fiji</groupId>
-  		<artifactId>TrakEM2_</artifactId>
-  		<version>1.0b-SNAPSHOT</version>
-  	</dependency>
-	<dependency>
-		<groupId>sc.fiji</groupId>
-		<artifactId>Simple_Neurite_Tracer</artifactId>
-		<version>2.0.0</version>
-	</dependency>
-	<dependency>
-		<groupId>sc.fiji</groupId>
-		<artifactId>level_sets</artifactId>
-		<version>1.0</version>
-	</dependency>
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
@@ -41,6 +26,15 @@
 	<artifactId>opencsv</artifactId>
 	<version>2.0</version>
 </dependency>
+	<dependency>
+		<groupId>mpicbg</groupId>
+		<artifactId>mpicbg</artifactId>
+		<version>0.7.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>mpicbg-trakem2</groupId>
+		<artifactId>mpicbg-trakem2</artifactId>
+	</dependency>
   </dependencies>
 
 </project>
