--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-	<groupId>sc.fiji</groupId>
-	<artifactId>pom-trakem2</artifactId>
-	<version>1.0-SNAPSHOT</version>
-  </parent>
-  
-  
-  <artifactId>trakem2_tps</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-	
-  <dependencies>
-  	<dependency>
-  		<groupId>jitk</groupId>
-  		<artifactId>jitk-tps</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-	</dependency>
-	<dependency>
-	<groupId>net.sf.opencsv</groupId>
-	<artifactId>opencsv</artifactId>
-	<version>2.0</version>
-</dependency>
-	<dependency>
-		<groupId>mpicbg</groupId>
-		<artifactId>mpicbg</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>mpicbg-trakem2</groupId>
-		<artifactId>mpicbg-trakem2</artifactId>
-	</dependency>
-  </dependencies>
+	<parent>
+		<groupId>sc.fiji</groupId>
+		<artifactId>pom-fiji</artifactId>
+		<version>6.1.3</version>
+	</parent>
 
+
+	<artifactId>trakem2_tps</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<dependencies>
+		<dependency>
+			<groupId>jitk</groupId>
+			<artifactId>jitk-tps</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>mpicbg</groupId>
+			<artifactId>mpicbg</artifactId>
+			<version>0.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>mpicbg-trakem2</artifactId>
+			<version>1.0.4-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<!-- NB: for project parent -->
+		<repository>
+			<id>imagej.public</id>
+			<url>http://maven.imagej.net/content/groups/public</url>
+		</repository>
+	</repositories>
 </project>
