--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 
 	<artifactId>trakem2_tps</artifactId>
-	<version>1.1.1</version>
+	<version>1.1.2-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
