--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-fiji</artifactId>
-		<version>7.2.0</version>
+		<version>15.5.0</version>
 	</parent>
 
 
@@ -23,9 +23,8 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.sf.opencsv</groupId>
+			<groupId>au.com.bytecode</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>mpicbg</groupId>
