--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<parent>
 		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>21.0.0</version>
+		<artifactId>pom-trakem2</artifactId>
+		<version>2.0.0</version>
 	</parent>
 
 
@@ -16,7 +16,6 @@
 		<dependency>
 			<groupId>jitk</groupId>
 			<artifactId>jitk-tps</artifactId>
-			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,7 +32,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>mpicbg-trakem2</artifactId>
-			<version>1.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
