--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,30 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>sc.fiji</groupId>
-		<artifactId>pom-trakem2</artifactId>
-		<version>2.0.0</version>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>14.0.0</version>
 	</parent>
 
+	<groupId>sc.fiji</groupId>
 	<artifactId>trakem2_tps</artifactId>
 	<version>1.1.3-SNAPSHOT</version>
+
+	<name>TrakEM2 thin plate splines</name>
+	<description>Thin plate splines in TrakEM2.</description>
+	<url>https://github.com/saalfeldlab/trakem2-tps</url>
+	<inceptionYear>2014</inceptionYear>
+	<organization>
+		<name>Fiji</name>
+		<url>https://fiji.sc/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>GNU General Public License v2+</name>
+			<url>https://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
@@ -54,6 +71,33 @@
 			<properties><id>hinerm</id></properties>
 		</contributor>
 	</contributors>
+
+	<mailingLists>
+		<mailingList>
+			<name>ImageJ Forum</name>
+			<archive>http://forum.imagej.net/</archive>
+		</mailingList>
+	</mailingLists>
+
+	<scm>
+		<url>https://github.com/saalfeldlab/trakem2-tps</url>
+		<connection>scm:git:git://github.com/saalfeldlab/trakem2-tps</connection>
+		<developerConnection>scm:git:git@github.com:saalfeldlab/trakem2-tps</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/saalfeldlab/trakem2-tps/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/saalfeldlab/trakem2-tps</url>
+	</ciManagement>
+
+	<properties>
+		<license.licenseName>gpl_v2</license.licenseName>
+		<license.copyrightOwners>Howard Hughes Medical Institute.</license.copyrightOwners>
+	</properties>
 
 	<repositories>
 		<repository>
