--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>14.0.0</version>
+		<version>15.0.0</version>
 	</parent>
 
 	<groupId>sc.fiji</groupId>
@@ -125,7 +125,7 @@
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
-			<artifactId>mpicbg-trakem2</artifactId>
+			<artifactId>trakem2-transform</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
