--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,7 +10,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>trakem2_tps</artifactId>
-	<version>1.1.3-SNAPSHOT</version>
+	<version>1.1.3</version>
 
 	<name>TrakEM2 thin plate splines</name>
 	<description>Thin plate splines in TrakEM2.</description>
@@ -83,7 +82,7 @@
 		<url>https://github.com/saalfeldlab/trakem2-tps</url>
 		<connection>scm:git:git://github.com/saalfeldlab/trakem2-tps</connection>
 		<developerConnection>scm:git:git@github.com:saalfeldlab/trakem2-tps</developerConnection>
-		<tag>HEAD</tag>
+		<tag>trakem2_tps-1.1.3</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
