--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 jdk: oraclejdk8
 branches:
-  only: master
+  only:
+  - master
+  - "/.*-[0-9]+\\..*/"
 install: true
 script: ".travis/build.sh"
-after_success: ".travis/notify.sh Travis-Success"
-after_failure: ".travis/notify.sh Travis-Failure"
 env:
   global:
   - secure: SiEbNAAJgRWklDAefPzGjedosKutPXapAKcjLnOyBV1i6GTgJIwiRjEvInCPc4UC6AxXdkU+Iv3rM5M9e91zwF+C9gp9Ko/W9iM8OXPGLB9GAfjEOWlQ1oLHDQAIP0ExXPWuVscnt20vQEsyytbN6VPdEkH/2/T3Y9u0Ba9FY78=
