POM: deploy releases to the ImageJ repository

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,9 @@
 	<properties>
 		<license.licenseName>gpl_v2</license.licenseName>
 		<license.copyrightOwners>Howard Hughes Medical Institute.</license.copyrightOwners>
+
+		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
+		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 	</properties>
 
 	<repositories>
