--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,12 @@ branches:
   - "/.*-[0-9]+\\..*/"
 install: true
 script: ".travis/build.sh"
+cache:
+  directories:
+  - "~/.m2/repository"
 env:
   global:
-  - secure: SiEbNAAJgRWklDAefPzGjedosKutPXapAKcjLnOyBV1i6GTgJIwiRjEvInCPc4UC6AxXdkU+Iv3rM5M9e91zwF+C9gp9Ko/W9iM8OXPGLB9GAfjEOWlQ1oLHDQAIP0ExXPWuVscnt20vQEsyytbN6VPdEkH/2/T3Y9u0Ba9FY78=
-  - secure: m9wqISaFrC7sUkmwzQAjYj/KdQzTF9oKWpHxav3JZp7JGa5TxC9BEQoTABSCY//NFkO2OYhi5AgkWAKyItTwnyWDrW/rtzoaSe6UIvhAYquC60jlUg+Lzu7Q3VVmNJbDGsVo6lo5DHbba3eJqb/VqKCetVH6Zc5TBwwHY5fovOU=
+  - secure: Unerf/jH/TtQluo3zivjXBFtI5I0Srwh1GcAbls6TKoo3ueer+kxIMZICHrtST1koS1e/pTnlO1NiKGkATU9wABt8o6MadmmlAi4ky3GI950Wuuye5igTfg85922pWRWMrosShjA4xNsaYhq4uCJR5YPnzM4MZgp7gKUre0CwqI=
+  - secure: byRNu+cx+Bg7GMROPfDvOolnbgtliwU215yQksRRWs7sCu3P3K1C19y4qxiwdNZH9AiF5tD3BxyBIdaMRYrgd8D/aOUXINQ5mjJOoFl89DWXehGevafE5gx5K7rRTDQ6eiBv334oV+AhSmv93QrcXziRt28Al7IH/CCPpV6nmd8=
+  - secure: RTDjNNRdYDbDMfspLFHXr7pzVgCY4onNGuzSH24avjx8GhXTHpYE6xuFiCE+Id+NnCwhWsK97HYOvX1PGb2SKRR27lRUTo0rkf6j4crhkpKZERnMp4jBHXAyxLP6JL+B0bkHTH6SdlkVSHFzvnI6AXbcWbeIHcqRfWPti/9Xq2U=
+  - secure: nSq0Pwc8yGZe+6k2qAldDjeCAPjDnXqsRq3CNMUh7IPtdpshbf7tE+DiiHIWKBlH9A3zPP3pvLLMStUxcoKpIv9V3L8OZSSgQBk93WHfQCqzwxB7Nf8WiZOVb4lky0Hy0OviW3W4ETIINIryLZB7n0jgXy5u/2ED4ANzzXYFCo0=
