--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>trakem2_tps</artifactId>
-	<version>1.1.4-SNAPSHOT</version>
+	<version>1.1.4</version>
 
 	<name>TrakEM2 thin plate splines</name>
 	<description>Thin plate splines in TrakEM2.</description>
@@ -82,7 +82,7 @@
 		<url>https://github.com/saalfeldlab/trakem2-tps</url>
 		<connection>scm:git:git://github.com/saalfeldlab/trakem2-tps</connection>
 		<developerConnection>scm:git:git@github.com:saalfeldlab/trakem2-tps</developerConnection>
-		<tag>HEAD</tag>
+		<tag>trakem2_tps-1.1.4</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
